[package]
name = "gamestate_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
csv = "1.3.1"
futures = "0.3.31"
futures-timer = "3.0.3"
log = "0.4.22"
tokio = { version = "1.43.0", features = ["full"] }
