[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
log = "0.4.26"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
opencv = "0.94.2"
serde = { version = "1.0.218", features = ["derive"] }
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
