[package]
name = "pod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
opencv = "0.93.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
textwrap = "0.16.1"
